--- a/twitchchatd/Cargo.toml
+++ b/twitchchatd/Cargo.toml
@@ -13,3 +13,7 @@ simplelog = "0.5.3"
 serde_json = "1.0.33"
 
 crossbeam-channel = "0.3.2"
+
+futures = "0.1.25"
+tokio = {version = "0.1.13", features = ["async-await-preview"]}
+tokio-async-await = "0.1.4"
