--- a/twitchchatd/Cargo.toml
+++ b/twitchchatd/Cargo.toml
@@ -11,3 +11,4 @@ simplelog = "0.5.3"
 serde_json = "1.0.33"
 serde = {version = "1.0.82", features = ["derive"]}
 crossbeam-channel = "0.3.2"
+directories = "1.0.2"
