--- a/twitchchat/Cargo.toml
+++ b/twitchchat/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.6"
-serde = {version = "1.0.82", features = ["derive"]}
-hashbrown = { version = "0.1.7", features = ["serde"] }
+serde = { version = "1.0.88", features = ["derive"] }
+serde_json = "1.0.38"
+hashbrown = { version = "0.1.8", features = ["serde"] }
+directories = "1.0.2"
+toml = "0.4.10"
