--- a/twitchchatc/Cargo.toml
+++ b/twitchchatc/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2018"
 
 [dependencies]
 twitchchat = { path = "../twitchchat" }
+log = "0.4.6"
 termcolor = "1.0.4"
 atty = "0.2.11"
 term_size = "0.3.1"
-serde_json = "1.0.33"
+serde = { version = "1.0.88", features = ["derive"] }
+serde_json = "1.0.38"
 unicode-segmentation = "1.2.1"
 unicode-width = "0.1.5"
