--- a/twitchchatd/Cargo.toml
+++ b/twitchchatd/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 twitchchat = { path = "../twitchchat" }
 log = "0.4.6"
-simplelog = "0.5.3"
+env_logger = "0.6.0"
 directories = "1.0.2"
-serde = { version = "1.0.82", features = ["derive"] }
-serde_json = "1.0.33"
-crossbeam-channel = "0.3.4"
+serde = { version = "1.0.88", features = ["derive"] }
+serde_json = "1.0.38"
+crossbeam-channel = "0.3.8"
