--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [    
-    "twitchchat",
-    "twitchchatd",
-    "twitchchatc"
+    "streamchat",
+    "streamchatd",
+    "streamchatc"
 ]
