--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,24 @@
-[workspace]
-members = [    
-    "streamchat",
-    "streamchatd",
-    "streamchatc"
-]
+[package]
+name = "streamchat"
+version = "0.1.0"
+authors = ["museun <museun@outlook.com>"]
+edition = "2018"
+
+[dependencies]
+log = "0.4.6"
+env_logger = "0.6.1"
+twitchchat = "0.0.2"
+directories = "1.0.2"
+crossbeam-channel = "0.3.8"
+hashbrown = { version = "0.1.8", features = ["serde"] }
+serde = { version = "1.0.89", features = ["derive"] }
+serde_json = "1.0.39"
+toml = "0.4.10"
+unicode-segmentation = "1.2.1"
+unicode-width = "0.1.5"
+termcolor = "1.0.4"
+atty = "0.2.11"
+term_size = "0.3.1"
+
+[patch.crates-io]
+twitchchat = { git = "https://github.com/museun/twitchchat", branch = "dev" }
