--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 log = "0.4.6"
 env_logger = "0.6.1"
-twitchchat = "0.1"
+twitchchat = {version = "0.1", features = ["all"]}
 directories = "1.0.2"
 crossbeam-channel = "0.3.8"
 hashbrown = { version = "0.1.8", features = ["serde"] }
