--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-twitchchat = { version = "0.2", features = ["all"] }
+twitchchat = "0.4.2"
 log = "0.4.6"
 env_logger = "0.6.1"
 directories = "1.0.2"
 crossbeam-channel = "0.3.8"
-hashbrown = { version = "0.1.8", features = ["serde"] }
-serde = { version = "1.0.89", features = ["derive"] }
+hashbrown = { version = "0.2.0", features = ["serde"] }
+serde = { version = "1.0.90", features = ["derive"] }
 serde_json = "1.0.39"
 toml = "0.5.0"
 unicode-segmentation = "1.2.1"
@@ -19,4 +19,5 @@ unicode-width = "0.1.5"
 termcolor = "1.0.4"
 atty = "0.2.11"
 term_size = "0.3.1"
+rand = "0.6.5"
 ws = "0.8.0"
