--- a/streamchat/Cargo.toml
+++ b/streamchat/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-twitchchat = "0.4.2"
-serde = { version = "1.0.90", features = ["derive"] }
+twitchchat = "0.4.3"
+
+[dependencies.serde]
+version = "1.0.90"
+features = ["derive"]
