--- a/streamchatc/Cargo.toml
+++ b/streamchatc/Cargo.toml
@@ -5,14 +5,18 @@ authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-twitchchat = "0.4.2"
 streamchat = { path = "../streamchat" }
-configurable = { git = "https://github.com/museun/configurable", version = "0.2.3" }
-
-unicode-width = "0.1.5"
-serde = { version = "1.0.90", features = ["derive"] }
-serde_json = "1.0.39"
-
+twitchchat = "0.4.3"
 gumdrop = "0.5.0"
 gumdrop_derive = "0.5.0"
 crossterm = "0.9.3"
+unicode-width = "0.1.5"
+serde_json = "1.0.39"
+
+[dependencies.serde]
+version = "1.0.90"
+features = ["derive"]
+
+[dependencies.configurable]
+git = "https://github.com/museun/configurable"
+version = "0.3.0"
