--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,3 @@
 edition = "2018"
-reorder_imports = false  # rls will mess things up if these are set
-reorder_modules = false  # rls will mess things up if these are set
+# reorder_imports = false  # rls will mess things up if these are set
+# reorder_modules = false  # rls will mess things up if these are set
