--- a/streamchatc/Cargo.toml
+++ b/streamchatc/Cargo.toml
@@ -6,17 +6,19 @@ edition = "2018"
 
 [dependencies]
 streamchat = { path = "../streamchat" }
-twitchchat = "0.6.3"
-gumdrop = "0.5.0"
-gumdrop_derive = "0.5.0"
-crossterm = "0.9.5"
+twitchchat = "0.6.4"
+configurable =  "0.3.4"
+gumdrop = "0.6.0"
 unicode-width = "0.1.5"
-serde_json = "1.0.39"
+unicode-segmentation = "1.3.0"
+console = "0.7.7"
+yansi = "0.5.0"
+serde_json = "1.0.40"
 
 [dependencies.serde]
-version = "1.0.92"
+version = "1.0.97"
 features = ["derive"]
 
-[dependencies.configurable]
-git = "https://github.com/museun/configurable"
-version = "0.3.1"
+[dependencies.maybe_list]
+git = "https://github.com/museun/maybe_list"
+version = "0.1.0"
