--- a/streamchatc/Cargo.toml
+++ b/streamchatc/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2018"
 
 [dependencies]
 streamchat = { path = "../streamchat" }
-twitchchat = "0.6.4"
-configurable =  "0.3.4"
+
+configurable = "0.3.4"
 gumdrop = "0.6.0"
 unicode-width = "0.1.5"
 unicode-segmentation = "1.3.0"
-console = "0.7.7"
-yansi = "0.5.0"
+
+serde = { version = "1.0.98", features = ["derive"] }
 serde_json = "1.0.40"
 
-[dependencies.serde]
-version = "1.0.97"
-features = ["derive"]
+yansi = "0.5.0"
+# TODO make the "backends" configurable until one actually works
+console = "0.7.7"
 
 [dependencies.maybe_list]
 git = "https://github.com/museun/maybe_list"
