--- a/streamchat/Cargo.toml
+++ b/streamchat/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-twitchchat = "0.6.6"
+twitchchat = "0.6.7"
 serde = { version = "1.0.98", features = ["derive"] }
+crossbeam-channel = "0.3.9"
+log = "0.4.8"
