--- a/streamchatc/Cargo.toml
+++ b/streamchatc/Cargo.toml
@@ -9,8 +9,11 @@ streamchat = { path = "../streamchat" }
 
 configurable = "0.3.4"
 gumdrop = "0.6.0"
+lexical_bool = "0.1.2"
+
 unicode-width = "0.1.5"
 unicode-segmentation = "1.3.0"
+crossbeam-channel = "0.3.9"
 
 serde = { version = "1.0.98", features = ["derive"] }
 serde_json = "1.0.40"
@@ -18,6 +21,9 @@ serde_json = "1.0.40"
 yansi = "0.5.0"
 # TODO make the "backends" configurable until one actually works
 console = "0.7.7"
+
+flexi_logger = "0.14.0"
+log = "0.4.8"
 
 [dependencies.maybe_list]
 git = "https://github.com/museun/maybe_list"
